# Six_in_a_row

./: CMakeLists.txt  PvpSixInARowWidget.cpp  PvpSixInARowWidget.h  README.md  ai.cpp  ai.h  audio_manager.cpp  audio_manager.h  data_persistence.cpp  data_persistence.h  file_operation.cpp  file_operation.h  game_logic.cpp  game_logic.h  history_widget.cpp  history_widget.h  main.cpp  menu_widget.cpp  menu_widget.h  settings_dialog.cpp  settings_dialog.h  ui_widget.cpp  ui_widget.h
